Improve Projects visuals

--- a/index.html
+++ b/index.html
@@ -3,18 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Web personal</title>
-  
-  <!-- Enlace al archivo CSS -->
+  <title>FresaDev</title>
   <link rel="stylesheet" href="css/styles.css">
-
-  <!-- Favicon -->
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
+  <link href="https://fonts.googleapis.com/css?family=Quicksand:400,600&display=swap" rel="stylesheet">
 </head>
 <body>
   <div id="sidebar"></div>
   <main id="content"></main>
-  <!-- Enlace al archivo JavaScript -->
   <script src="js/scripts.js"></script>
 </body>
 </html>
