--- a/sections/home.html
+++ b/sections/home.html
@@ -1,46 +1,73 @@
-    <section id="home" class="section">
-        <section class="column">
-
-            <section class="title">
-                <h1>Bienvenido a mi Portfolio</h1>
-            </section>
-
-            <!-- Imagen -->
-            <section class="img">
-                <img src="images/foto.jpg" alt="Imagen de mi">
-            </section>
-            
-            <!-- About me -->
-            <section class="about">
-                <h2>Sobre mí</h2>
-                <p>En este portfolio encontrarás una selección de mis proyectos más destacados, así como información sobre mí y mis habilidades.</p>
-            </section>
+<section id="home" class="section">
+    <section class="column-left">
+        <section class="title">
+            <h1>Helen Fiorella Medina</h1>
+        </section>
+        <section class="subtitle">
+            <h6>Estudiante de Inteligencia Artificial</h6>
+        </section>
+        <section class="img">
+            <img src="images/foto.jpg" alt="Imagen">
         </section>
         
-        <section class="column main">
+        <!-- About me -->
+        <section class="about">
+            <h2>Sobre mí</h2>
+            <p>Soy una estudiante apasionada por la Inteligencia Artificial y el desarrollo web. Me encanta aprender y enfrentar nuevos desafíos.</p>
+            <p>En mi tiempo libre, disfruto explorar nuevas tecnologías y trabajar en proyectos que me permitan aplicar mis conocimientos.</p>
+        </section>
 
-            <!-- Skills -->
-            <section class="skills">
-                <h2>Habilidades</h2>
-                <ul>
-                    <li>HTML</li>
-                    <li>CSS</li>
-                    <li>JavaScript</li>
-                    <li>React</li>
-                    <li>Node.js</li>
-                </ul>
-            </section>
-        </section>  
-        <section class="column">
-            <!-- Contact -->
-            <section class="contact">
-                <h2>Contacto</h2>
-                <p>Si deseas ponerte en contacto conmigo, no dudes en enviarme un correo a <a href="mailto:fiorellamedinaortiz@gmail.com">
-            </a> o a través de mis redes sociales.</p>
-                <ul>
-                    <li><a href="https://www.linkedin.com/in/fiorella-medina-ortiz/" target="_blank">LinkedIn</a></li>
-                    <li><a href=""> </a>
-                </ul>
-            </section>
-         </section> 
+        <!-- Imagenes -->
+        <section class="images">
+            <div class="img1">
+                <img src="images/Carakawaii.png" alt="Imagen 1">
+            </div>
+        </section>
     </section>
+
+    <section class="column-main">
+        <div class="main-rect">
+            <h2>Mis Proyectos</h2>
+            <p>Aquí puedes ver algunos de los proyectos en los que he trabajado. Cada uno de ellos refleja mi pasión por el desarrollo web y mi compromiso con la calidad.</p>
+        </div>    
+        <div class="main-squares">
+            <div class="main-square">
+                <div class="icon">💌</div>
+                <h3>Gmail</h3>
+                <a href="mailto:fiorellamedinaortiz@gmail.com" target="_blank">Ir a Gmail</a>
+            </div>
+            <div class="main-square">
+                <div class="icon">💻</div>
+                <h3>GitHub</h3>
+                <a href="https://github.com/Helen0614" target="_blank">Ir a GitHub</a>
+            </div>
+            <div class="main-square">
+                <div class="icon">💼</div>
+                <h3>LinkedIn</h3>
+                <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">Ir a LinkedIn</a>
+
+            </div>
+        </div>
+    </section>  
+
+    <section class="column-right">
+        <h1>Roadmap de Aprendizaje</h1>
+
+        <!-- Roadmap con scroll -->
+        <div class="roadmap scrollable">
+
+            <div class="node">
+                <h3>🌐 Web Personal y Cute Portfolio</h3>
+                <div class="subnode"><p>HTML, CSS y JavaScript</p></div>
+            </div>
+
+            <div class="node">
+                <h3>🎓 Grado en Inteligencia Artificial</h3>
+                <div class="subnode-done"><p>Primero</p></div>
+                <div class="subnode"><p>Segundo</p></div>
+                <div class="subnode"><p>Tercero</p></div>
+                <div class="subnode"><p>Cuarto</p></div>
+            </div>
+        </div>
+    </section>
+</section>
