--- a/sections/home.html
+++ b/sections/home.html
@@ -18,33 +18,55 @@
         </section>
 
         <!-- Imagenes -->
-        <section class="images">
-            <div class="img1">
-                <img src="images/Carakawaii.png" alt="Imagen 1">
-            </div>
+        <section class="bottom-img">
+            <pre>
+                ⠀⠀⠀⠀⠀⢀⡀⠀⠀⠀⠀⠀⡄⠀⠀⠀⠀⢀⠀⠀
+                ⠀⠀⠀⠀⠀⠀⣏⠓⠒⠤⣰⠋⠹⡄⠀⣠⠞⣿⠀⠀
+                ⠀⠀⠀⢀⠄⠂⠙⢦⡀⠐⠨⣆⠁⣷⣮⠖⠋⠉⠁⠀
+                ⠀⠀⡰⠁⠀⠮⠇⠀⣩⠶⠒⠾⣿⡯⡋⠩⡓⢦⣀⡀
+                ⠀⡰⢰⡹⠀⠀⠲⣾⣁⣀⣤⠞⢧⡈⢊⢲⠶⠶⠛⠁
+                ⢀⠃⠀⠀⠀⣌⡅⠀⢀⡀⠀⠀⣈⠻⠦⣤⣿⡀⠀⠀
+                ⠸⣎⠇⠀⠀⡠⡄⠀⠷⠎⠀⠐⡶⠁⠀⠀⣟⡇⠀⠀
+                ⡇⠀⡠⣄⠀⠷⠃⠀⠀⡤⠄⠀⠀⣔⡰⠀⢩⠇⠀⠀
+                ⡇⠀⠻⠋⠀⢀⠤⠀⠈⠛⠁⠀⢀⠉⠁⣠⠏⠀⠀⠀
+                ⣷⢰⢢⠀⠀⠘⠚⠀⢰⣂⠆⠰⢥⡡⠞⠁⠀⠀⠀⠀
+                ⠸⣎⠋⢠⢢⠀⢠⢀⠀⠀⣠⠴⠋⠀⠀⠀⠀⠀⠀⠀
+                ⠀⠘⠷⣬⣅⣀⣬⡷⠖⠋⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀
+                ⠀⠀⠀⠀⠈⠁⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀⠀
+            </pre>
         </section>
     </section>
 
     <section class="column-main">
         <div class="main-rect">
-            <h2>Mis Proyectos</h2>
-            <p>Aquí puedes ver algunos de los proyectos en los que he trabajado. Cada uno de ellos refleja mi pasión por el desarrollo web y mi compromiso con la calidad.</p>
+            <h1>Proyectos</h1>
+            <div id="project-list" class="project-grid">
+                <div class="project-card">
+                    <h2>FresaDev</h2>
+                    <p><strong>Lenguaje:</strong> HTML, CSS, JavaScript</p>
+                    <p>Un proyecto de desarrollo web que muestra mis habilidades en diseño y programación.</p>
+                    <a href="https://github.com/Helen0614/FresaDev" target="_blank">Ver en GitHub</a>
+                </div>
+                <div class="project-card">
+                    <h2>Proyecto 2</h2>
+                    <p><strong>Lenguaje:</strong> Python, Flask</p>
+                    <p>Un proyecto de backend que utiliza Flask para crear una API RESTful.</p>
+                    <a href="https://github.com/Helen0614/Proyecto2" target="_blank">Ver en GitHub</a>
+                </div>
+            </div>
         </div>    
         <div class="main-squares">
             <div class="main-square">
                 <div class="icon">💌</div>
-                <h3>Gmail</h3>
-                <a href="mailto:fiorellamedinaortiz@gmail.com" target="_blank">Ir a Gmail</a>
+                <a href="mailto:fiorellamedinaortiz@gmail.com" target="_blank">Gmail</a>
             </div>
             <div class="main-square">
                 <div class="icon">💻</div>
-                <h3>GitHub</h3>
-                <a href="https://github.com/Helen0614" target="_blank">Ir a GitHub</a>
+                <a href="https://github.com/Helen0614" target="_blank">GitHub</a>
             </div>
             <div class="main-square">
                 <div class="icon">💼</div>
-                <h3>LinkedIn</h3>
-                <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">Ir a LinkedIn</a>
+                <a href="https://www.linkedin.com/in/tu-usuario" target="_blank">LinkedIn</a>
 
             </div>
         </div>
@@ -62,8 +84,8 @@
             </div>
 
             <div class="node">
-                <h3>🎓 Grado en Inteligencia Artificial</h3>
-                <div class="subnode-done"><p>Primero</p></div>
+                <h3>🎓 Grado en Inteligencia Artificial (Objetivo principal)</h3>
+                <div class="subnode-done"><p>Primero</p><div class="date">Sep. 24' - Jun. 25'</div></div>
                 <div class="subnode"><p>Segundo</p></div>
                 <div class="subnode"><p>Tercero</p></div>
                 <div class="subnode"><p>Cuarto</p></div>
