--- a/index.html
+++ b/index.html
@@ -24,15 +24,6 @@
   <script src="js/theme.js" defer></script>
 </head>
 <body>
-  <!--  
-  ===========================================
-  FONDO ANIMADO - MATRIX
-  ===========================================
-  -->
-  <div class="matrix-background">
-    <canvas id="matrixCanvas"></canvas>
-  </div>
-  <script src="js/matrix.js"></script>
   <!--
   ===========================================
   HEADER - NAVEGACIÓN Y LOGO PRINCIPAL
@@ -91,6 +82,15 @@
   ===========================================
   -->
   <div class="main-container">
+    <!--  
+    ===========================================
+    FONDO ANIMADO - MATRIX
+    ===========================================
+    -->
+    <div class="matrix-background">
+      <canvas id="matrixCanvas"></canvas>
+    </div>
+    
     <main>
       <!--
       ===========================================
@@ -321,5 +321,8 @@
       
     </main>
   </div>
+  
+  <!-- Script para la animación Matrix -->
+  <script src="js/matrix.js"></script>
 </body>
 </html>
