--- a/index.html
+++ b/index.html
@@ -114,11 +114,7 @@
           </div>
         </div>
         
-        <!--
-        ===========================================
-        TARJETAS DE CONTACTO
-        ===========================================
-        -->
+        <!-- Tarjeta de contacto -->
         <div class="contact-cards">
           <!-- Tarjeta LinkedIn -->
           <a href="https://www.linkedin.com/in/helenfiorellamo" target="_blank" class="contact-card linkedin">
@@ -240,7 +236,7 @@
       
     </main>
   </div>
-  
+
   <!-- Script para la animación Matrix -->
   <script src="js/matrix.js"></script>
 </body>
