--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
   <!-- Scripts JavaScript -->
   <script src="js/language.js" defer></script>
   <script src="js/theme.js" defer></script>
+  <script src="js/projects.js" defer></script>
+  <!-- <script src="js/matrix.js"></script> - Esta al final de body -->
 </head>
 <body>
   <!--
@@ -168,76 +170,13 @@
       <section id="projects" class="projects-section">
         <div class="projects-content">
           <h2 class="section-title" data-translate="projectsTitle"></h2>
-          <div class="projects-grid">
-
-              <!-- DigiNet Project -->
-              <div class="project-card">
-                <div class="project-header">
-                  <h3>DigiNet</h3>
-                  <div class="project-tech">
-                    <span class="tech-tag">C</span>
-                  </div>
-                </div>
-                <p class="project-description" data-translate="digiNetDescription"></p>
-                <div class="project-links">
-                  <a href="https://github.com/Helen0614/DigiNet" target="_blank" class="project-link">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                      <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                    </svg>
-                    GitHub
-                  </a>
-                </div>
-              </div>
-
-              <!-- Snake_C Project -->
-              <div class="project-card">
-                <div class="project-header">
-                  <h3>Snake_C</h3>
-                  <div class="project-tech">
-                    <span class="tech-tag">C</span>
-                  </div>
-                </div>
-                <p class="project-description" data-translate="snakeCDescription"></p>
-                <div class="project-links">
-                  <a href="https://github.com/Helen0614/Snake_C" target="_blank" class="project-link">
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                      <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                    </svg>
-                    GitHub
-                  </a>
-                </div>
-              </div>
-
-              <!-- 
-              Plantilla de proyectos
-              <div class="project-card">
-                <div class="project-header">
-                  <h3>____________</h3>
-                  <div class="project-tech"> 
-                    <span class="tech-tag"> _________ </span>
-                    <span class="tech-tag"> _________ </span>
-                  </div>
-                </div>
-                <p class="project-description" data-translate="______________Description"></p> 
-                <div class="project-links">
-                  <a href="https://github.com/Helen0614/_______" target="_blank" class="project-link"> 
-                    <svg width="16" height="16" viewBox="0 0 24 24" fill="currentColor">
-                      <path d="M12 0c-6.626 0-12 5.373-12 12 0 5.302 3.438 9.8 8.207 11.387.599.111.793-.261.793-.577v-2.234c-3.338.726-4.033-1.416-4.033-1.416-.546-1.387-1.333-1.756-1.333-1.756-1.089-.745.083-.729.083-.729 1.205.084 1.839 1.237 1.839 1.237 1.07 1.834 2.807 1.304 3.492.997.107-.775.418-1.305.762-1.604-2.665-.305-5.467-1.334-5.467-5.931 0-1.311.469-2.381 1.236-3.221-.124-.303-.535-1.524.117-3.176 0 0 1.008-.322 3.301 1.23.957-.266 1.983-.399 3.003-.404 1.02.005 2.047.138 3.006.404 2.291-1.552 3.297-1.23 3.297-1.23.653 1.653.242 2.874.118 3.176.77.84 1.235 1.911 1.235 3.221 0 4.609-2.807 5.624-5.479 5.921.43.372.823 1.102.823 2.222v3.293c0 .319.192.694.801.576 4.765-1.589 8.199-6.086 8.199-11.386 0-6.627-5.373-12-12-12z"/>
-                    </svg>
-                    GitHub
-                  </a>
-                </div>
-              </div>
-              -->
-
-            </div>
+          <div class="projects-grid" id="projectsContainer"></div>
         </div>
       </section>
       
     </main>
   </div>
-
-  <!-- Script para la animación Matrix -->
+  <script src="js/navigation.js"></script>
   <script src="js/matrix.js"></script>
 </body>
 </html>
