--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           </a>
           
           <!-- Tarjeta Gmail -->
-          <a href="mailto:fiorellamedinaortiz@gmail.com" class="contact-card gmail">
+          <a href="mailto:helen@fresadev.eus" class="contact-card gmail">
             <div class="card-icon">
               <!-- Icono Gmail oficial -->
               <svg viewBox="0 0 24 24" width="32" height="32">
